# rhdh

./: .cursorignore  .cursorrules  .dockerignore  .gitattributes  .gitignore  .i18n.config.json  .lintstagedrc.cjs  .lintstagedrc.js  .lintstagedrc.json  .pr_agent.toml  .sonarcloud.properties  .yarnrc.yml  AGENTS.md  CONTRIBUTING.md  OWNERS  OWNERS_ALIASES  README.md  app-config.dynamic-plugins.yaml  app-config.example.production.yaml  app-config.example.yaml  app-config.local-e2e.yaml  app-config.plugin-sanity.yaml  app-config.production.yaml  app-config.yaml  argocd_clusterRole.yaml  catalog-info.yaml  check_pairs_current_state.py  codecov.yml  custom_install.sh  default.packages.yaml  dynamic-plugins.default.yaml  dynamic-plugins.yaml  index.html  index.html.1  install.sh  my_changes.diff  package.json  playwright.config.ts  pvc.yaml  rbac-policy.csv  (+15 more)
.ci/: package.json  release-smoke-testing.md
.claude/: settings.json
.cursor/: mcp.json
.github/: renovate.json
.husky/: pre-commit
.i18n-cache/: upload_gO1x9evesBS0qAX7AUPaY0_d6311838.json
.ibm/: .lintstagedrc.json  .prettierrc.js  OWNERS  package.json
.rulesync/: README.md
catalog-entities/: components.yaml  systems.yaml
docker/: .gitignore  Containerfile  Dockerfile  DockerfileBKP  README.adoc  cleanup-dynamic-plugins.sh  install-dynamic-plugins.py  install-dynamic-plugins.sh  policy.json  pytest.ini  (+2 more)
python/: README.requirements.md  cachito_hash.sh  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
(+1607 files in other folders)
