[project]
name = "python"
version = "0.1.0"
description = "Builder for mkdocs-techdocs-core for Backstage"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-techdocs-core>=1.6.1",
    "plantuml-markdown>=3.11.1"
]

[dependency-groups]
build = [
    "setuptools>=80.10.2",
    "wheel>=0.46.3",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
runtime = [
    "mkdocs>=1.6.1",
    "mkdocs-techdocs-core>=1.6.1",
    "plantuml-markdown>=3.11.1"
]
