[project]
name = "python"
version = "0.1.0"
description = "Builder for mkdocs-techdocs-core for Backstage"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-techdocs-core>=1.6.1",
    "plantuml-markdown>=3.11.1"
]

[dependency-groups]
build = [
    "calver>=2025.10.20",
    "cython>=3.2.4",
    "flit-core>=3.11,<4",
    "hatch-nodejs-version>=0.3.0",
    "hatch-requirements-txt>=0.4.1",
    "hatchling>=0.21.1",
    "setuptools>=80.10.2",
    "setuptools-scm[toml]>=8.0",
    "wheel>=0.46.3",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
runtime = [
    "mkdocs>=1.6.1",
    "mkdocs-techdocs-core>=1.6.1",
    "plantuml-markdown>=3.11.1",
]

[tool.uv.sources]
plantuml-markdown = { url = "https://github.com/mikitex70/plantuml-markdown/archive/592837e9c26b9e92d711af42bce8fb8697183f9d.zip" }
